Fix list layout on overflow: auto

--- a/packages/vscode-extension/src/webview/components/UrlSelect.css
+++ b/packages/vscode-extension/src/webview/components/UrlSelect.css
@@ -37,17 +37,24 @@
 
 .url-select-content {
   z-index: 1;
-  overflow-x: hidden;
-  overflow-y: auto;
-  scrollbar-width: thin;
   background-color: var(--swm-url-select-background);
   border-radius: 0 0 18px 18px;
-  max-height: 400px;
+  height: fit-content;
   box-shadow: var(--swm-backdrop-shadow);
+  overflow: hidden;
 }
 
 .url-select-viewport {
-  padding: 5px;
+  padding-bottom: 5px;
+  padding-inline: 5px;
+  overflow-x: hidden;
+  overflow-y: auto;
+  scrollbar-width: thin;
+  max-height: 200px;
+  display: flex;
+  flex-direction: column;
+  /* ensure the separator will always be stretched across the whole dropdown */
+  /* align-items: stretch; */
 }
 
 .url-select-label {
@@ -57,9 +64,19 @@
 }
 
 .url-select-separator {
-  height: 1px;
+  flex: 1;
+  width: calc(100% - 6px);
+  min-height: 1px;
   background-color: var(--swm-url-select-separator);
   margin: 3px;
+}
+
+.url-select-separator-top {
+  height: 1px;
+  background-color: var(--swm-url-select-separator);
+  margin-inline: 8px;
+  margin-bottom: 5px;
+  margin-top: 0;
 }
 
 .url-select-item {
@@ -100,10 +117,6 @@
 
 .url-select-item-text-dynamic {
   color: var(--swm-disabled-text);
-}
-
-.no-top-margin {
-  margin-top: 0;
 }
 
 @media (width <= 325px) {
